# Blokus_GenAI

./: Blokus.py  README.md
Blocus-focus-pokus/: OWNERSHIP.md  Portfolio_TEMPLATE.md  README.md  TEAM_SUMMARY.md  TOPIC-REVIEWING_evaluation.md  TOPIC-REVIEWING_example-problems.md  TOPIC-REVIEWING_guidelines.md  pyproject.toml
Blocus-focus-pokus/docs/: ai_usage.md  architecture.md  evidence_log.md  requirements_traceability.md  rule-sources.md
Blocus-focus-pokus/fixtures/scenarios/: classic_corner_sequence.json
Blocus-focus-pokus/fixtures/states/: classic_initial.json
Blocus-focus-pokus/scripts/: evaluate.sh  install.sh  run_demo.sh  test.sh
Blocus-focus-pokus/src/blokus/: __init__.py  __main__.py  cli.py  config.py  engine.py  evaluate.py  models.py  pieces.py  players.py  render.py
Blocus-focus-pokus/tests/: test_ai.py  test_cli.py  test_engine.py  test_evaluate.py  test_pieces.py  test_serialization.py
